Refactor views to Class-Based Views, update templates and styling, fix toggle task status method

--- a/todo/templates/tag_list.html
+++ b/todo/templates/tag_list.html
@@ -4,32 +4,51 @@
 
 {% block content %}
 <div class="container mt-5">
-    <h1>Tags</h1>
+    <div class="row">
+        <!-- Sidebar -->
+        <div class="col-md-2">
+            <ul class="nav flex-column">
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'home' %}">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link active" href="{% url 'tag_list' %}">Tags</a>
+                </li>
+            </ul>
+        </div>
+        
+        <!-- Main Content -->
+        <div class="col-md-10">
+            <h1>Tags</h1>
+            <a href="{% url 'add_tag' %}" class="btn btn-primary mb-3 float-right">Add</a>
 
-    <a href="{% url 'add_tag' %}" class="btn btn-primary mb-3">Add Tag</a>
-
-    {% if tags %}
-        <table class="table table-striped">
-            <thead>
-                <tr>
-                    <th>Name</th>
-                    <th>Actions</th>
-                </tr>
-            </thead>
-            <tbody>
-                {% for tag in tags %}
-                <tr>
-                    <td>{{ tag.name }}</td>
-                    <td>
-                        <a href="{% url 'update_tag' tag.id %}" class="btn btn-sm btn-warning">Update</a>
-                        <a href="{% url 'delete_tag' tag.id %}" class="btn btn-sm btn-danger">Delete</a>
-                    </td>
-                </tr>
-                {% endfor %}
-            </tbody>
-        </table>
-    {% else %}
-        <p>No tags found.</p>
-    {% endif %}
+            {% if tags %}
+                <table class="table">
+                    <thead>
+                        <tr>
+                            <th>Name</th>
+                            <th>Update</th>
+                            <th>Delete</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        {% for tag in tags %}
+                        <tr>
+                            <td>{{ tag.name }}</td>
+                            <td>
+                                <a href="{% url 'update_tag' tag.id %}" class="btn btn-secondary">Update</a>
+                            </td>
+                            <td>
+                                <a href="{% url 'delete_tag' tag.id %}" class="btn btn-secondary">Delete</a>
+                            </td>
+                        </tr>
+                        {% endfor %}
+                    </tbody>
+                </table>
+            {% else %}
+                <p>No tags found.</p>
+            {% endif %}
+        </div>
+    </div>
 </div>
 {% endblock %}
